# MathFix

./: Cargo.toml  README.md  Readme.md  index.html  package.json
projects/latex-fmt/: Cargo.toml  Readme.md
projects/latex-fmt/src/: lib.rs  settings.rs
projects/latex-fmt/src/utils/: formatter.rs  mod.rs  replacements.rs  settings.rs  string_tools.rs
projects/latex-fmt/tests/: complex.tex  do_fmt.rs  file.tex  main.rs  simple.tex
projects/latex-parser/: Cargo.toml  Readme.md  latex.pest
projects/latex-parser/src/: latex_parser.rs  lib.rs  pre_build.rs
projects/mathfix-playground/: index.html
projects/mathfix-playground/src/: lib.rs
src/: lib.rs
