[package]
name = "mathfix_playground"
publish = false
version = "0.0.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration Parser via Pest"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/MathFix"
exclude = ["/tests/*"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.67"

[dependencies.latex_fmt]
version = "0.1.0"
path = "../latex-fmt"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
